Bug 490406 - Line number area of Kate diff between two files is not scrollable
Summary: Line number area of Kate diff between two files is not scrollable
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.05.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-17 13:28 UTC by Finley Watson
Modified: 2024-07-31 11:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Finley Watson 2024-07-17 13:28:51 UTC
SUMMARY
Kate's diff feature scrolls two files up and down together (when they are long enough). The text and scrollbar areas scrolls them up and down when the mouse is hovered over them and the mouse wheel is used, but scrolling while the mouse hovers over the line numbering areas does not work.

STEPS TO REPRODUCE
1. Open two files in Kate
2. Right-click a tab and select "Compare with Active Document"
3. View the resulting diff
4. Hover mouse over the line numbers on the left & in the centre of the screen, and try to scroll

OBSERVED RESULT
No scroll

EXPECTED RESULT
Scroll

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.1.2
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Kernel Version: 6.9.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2024-07-31 10:59:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1551
Comment 2 Waqar Ahmed 2024-07-31 11:06:19 UTC
Git commit 745b9e0b110980fc22f0406ff55f4d880ad6fc8a by Waqar Ahmed.
Committed on 31/07/2024 at 10:37.
Pushed by waqar into branch 'master'.

Diff: Forward wheel event to editor

M  +5    -0    apps/lib/diff/difflinenumarea.cpp
M  +1    -0    apps/lib/diff/difflinenumarea.h

https://invent.kde.org/utilities/kate/-/commit/745b9e0b110980fc22f0406ff55f4d880ad6fc8a
Comment 3 Waqar Ahmed 2024-07-31 11:09:14 UTC
Git commit aea91147f4091895b16f22181fe301ba31e6a5bb by Waqar Ahmed.
Committed on 31/07/2024 at 11:08.
Pushed by waqar into branch 'release/24.08'.

Diff: Forward wheel event to editor
(cherry picked from commit 745b9e0b110980fc22f0406ff55f4d880ad6fc8a)

M  +5    -0    apps/lib/diff/difflinenumarea.cpp
M  +1    -0    apps/lib/diff/difflinenumarea.h

https://invent.kde.org/utilities/kate/-/commit/aea91147f4091895b16f22181fe301ba31e6a5bb