Diff: Forward wheel event to editor

BUG: 490406