apps/lib/diff/difflinenumarea.cpp
@@ -216,4 +216,9 @@ void LineNumArea::mousePressEvent(QMouseEvent *e)
     }
 }
 
+void LineNumArea::wheelEvent(QWheelEvent *e)
+{
+    qApp->sendEvent(textEdit->viewport(), e);
+}
+
 #include "moc_difflinenumarea.cpp"
